# gEmbedded

./: .gitignore  README.md
gEmbedded-C/: CMakeLists.txt  README.md  TODO.txt  all.sh  build.sh  compile.sh  install.sh  test.sh  toolchain.cmake
gEmbedded-C/api/: common.h  devicecontext.h  devicecontextstatus.h  pindriver.h
gEmbedded-C/common/: peripheral.h  pin_status.h
gEmbedded-C/common/inc/: peripheral.h
gEmbedded-C/common/test/: memory_mapper_test.cpp  peripheral_test.cpp
gEmbedded-C/commontest/: pin_numbers_test.h  pin_test.h
gEmbedded-C/controller/inc/: devicecontroller.h  pin_controller.h  pin_exception.h  session.h  sessioncontroller.h  sessionfactory.h
gEmbedded-C/controller/src/: devicecontroller.c  pin_controller.c  sessioncontroller.c
gEmbedded-C/controller/test/: devicecontrollertest.cpp  pin_controller_test.cpp
gEmbedded-C/development/inc/: pin_store.h
gEmbedded-C/development/src/: pin_store.c
gEmbedded-C/development/test/: pin_store_test.cpp
gEmbedded-C/driver/: CMakeLists.txt
gEmbedded-C/driver/api/: driver_context.h  driver_exception.h  gpio_driver.h  i2c_driver.h
gEmbedded-C/driver/bcm2711/src/: gpiodriver.c
gEmbedded-C/driver/bcm2711/test/: gpiodriver.cpp
gEmbedded-C/driver/common/: common.h  common_peripheral.h
gEmbedded-C/driver/common/inc/: common_peripheral.h  memory_mapper.h  peripheral.h  peripheral_bcm2711.h
gEmbedded-C/driver/common/src/: memory_mapper.c  peripheral.c  peripheral_bcm2711.c
gEmbedded-C/driver/common/test/: memory_mapper_test.cpp  peripheral_test.cpp
gEmbedded-C/driver/commontest/: common_test.h  gpio_test.h  i2c_test.h  memory_test.h  pin_test.h
gEmbedded-C/driver/context/src/: driver_context.c
gEmbedded-C/driver/context/test/: driver_context_text.cpp
gEmbedded-C/driver/fs/inc/: lfs_gpio.h
gEmbedded-C/driver/fs/src/: gpiodriver.c
gEmbedded-C/driver/gpio/inc/: gpio_peripheral.h
gEmbedded-C/driver/gpio/src/: gpio_driver.c
gEmbedded-C/driver/gpio/test/: gpio_driver_test.cpp
gEmbedded-C/driver/i2c/inc/: i2c_peripheral.h  i2c_slave.h
gEmbedded-C/driver/i2c/src/: i2c_driver.c
gEmbedded-C/driver/i2c/test/: i2c_driver_test.cpp
gEmbedded-C/driver/inc/: common.h  gpiodriver.h  memory_mapper.h  pin.h  pin_driver.h  pinconfigdriver.h  piniodriver.h  pinvalidator.h  registers.h  x.h
gEmbedded-C/driver/lfs/src/: gpiodriver.c
gEmbedded-C/driver/lfs/test/: gpiodriver.cpp
gEmbedded-C/driver/memory/test/: memory_mapper_test.cpp
gEmbedded-C/driver/memorymap/inc/: bcm2711_gpio.h
gEmbedded-C/driver/mm/: CMakeLists.txt
gEmbedded-C/driver/mm/inc/: bcm2711_common.h  bcm2711_gpio.h  mapper.h
gEmbedded-C/driver/mm/src/: gpiodriver.c  mapper.c
gEmbedded-C/driver/pin/: CMakeLists.txt
gEmbedded-C/driver/pin/inc/: pin.h  pin_config_driver.h  pin_driver.h  pin_io_driver.h  pin_session.h  pin_store.h  pin_validator.h
gEmbedded-C/driver/pin/src/: pin_config_driver.c  pin_driver.c  pin_io_driver.c  pin_session.c  pin_store.c  pin_validator.c
gEmbedded-C/driver/pin/test/: pin_driver_test.cpp  pin_session_test.cpp  pin_store_test.cpp  pin_validator_test.cpp
gEmbedded-C/driver/src/: drivervariable.c  mapper.c  memory_mapper.c  pin_driver.c  pinconfigdriver.c  piniodriver.c  pinvalidator.c  x.c
gEmbedded-C/driver/test/: commontest.h  gpiodrivertest.cpp  mappertest.cpp  memory_mapper_test.cpp  pinconfigdrivertest.cpp  piniodrivertest.cpp  pinvalidatortest.cpp  xtest.cpp
gEmbedded-C/i2c/inc/: i2c_driver.h
gEmbedded-C/lib/: CMakeLists.txt
gEmbedded-C/lib/inc/: devicecontextlock.h  deviceregisters.h  mapper.h  pin.h
gEmbedded-C/lib/src/: devicecontext.c  inputpin.c  mapper.c
gEmbedded-C/pin/inc/: pin.h  pin_driver.h
gEmbedded-C/pin/src/: pin_driver.c  pin_store.c
gEmbedded-C/pin/test/: pin_store_test.cpp
gEmbedded-C/temp/: common_.h  devicecontext.h
gEmbedded-C/temp/lib/: CMakeLists.txt
gEmbedded-C/temp/lib/inc/: deviceregisters.h  session.h
gEmbedded-C/temp/lib/src/: devicecontext.c  pinfunction.c  pinregistrator.c  pinvalidator.c  pullupdown.c  session.c
gEmbedded-C/temp/test/: CMakeLists.txt  devicecontexttest.cpp  pinfunctiontest.cpp
gEmbedded-C/test/: CMakeLists.txt  mappertest.cpp  pinregistratortest.cpp  pinvalidatortest.cpp  pullupdowntest.cpp
gEmbedded-C/validator/inc/: pin_validator.h
gEmbedded-C/validator/src/: pin_validator.c
gEmbedded-C/validator/test/: pin_validator_test.cpp
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/: CMakeLists.txt
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/: CMakeLists.txt
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/lib/: CMakeLists.txt
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/lib/inc/: clockmanager.h  devicedriver.h  gpiodriver.h  i2cmasterdriver.h  pwmdriver.h
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/lib/src/: clockmanager.c  devicedriver.c  gpiodriver.c  i2cmasterdriver.c  pwmdriver.c
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/test/: CMakeLists.txt
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/test/inc/: devicedrivertest.h
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/bcm2711/test/src/: devicedrivertest.c  test.c
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/common/lib/inc/: com_comert_gEmbedded_device_nativeinterface_DeviceDriver.h  com_comert_gEmbedded_device_nativeinterface_GPIODriver.h  com_comert_gEmbedded_device_nativeinterface_I2CMasterDriver.h  com_comert_gEmbedded_device_nativeinterface_JNIUtil.h  com_comert_gEmbedded_device_nativeinterface_PWMDriver.h  common.h  jniutil.h  mapper.h
gEmbedded-JAVA/gEmbedded-native/src/main/c/native/common/lib/src/: jniutil.c  mapper.c
gEmbedded-MOS/: CMakeLists.txt  toolchain-none.cmake
gEmbedded-MOS/kernel/: CMakeLists.txt
gEmbedded-MOS/kernel/core/: CMakeLists.txt
gEmbedded-MOS/kernel/core/inc/: common.h  memory.h  process.h
gEmbedded-MOS/kernel/core/src/: core.S  memory.c  process.S  process.c  startup.S
gEmbedded-MOS/kernel/userinterface/: CMakeLists.txt
gEmbedded-MOS/user/: CMakeLists.txt
gEmbedded-MOS/user/src/: test.c
(+116 files in other folders)
